--- a/index.html
+++ b/index.html
@@ -9,9 +9,10 @@
 
 <body>
 
-    <!-- Navigation -->
+   <!-- Header -->
     <Header class="header">
         <h1>Hori<span class="seo">seo</span>n</h1>
+         <!-- Navigation -->
         <nav>
             <ul>
                 <li>
@@ -33,7 +34,7 @@
     <!-- Primary Content -->
     <section class="content">
 
-        <article id="search-engine-optimization" class="search-engine-optimization">
+        <article>
             <img src="./assets/images/search-engine-optimization.jpg" alt="" class="float-left" />
             <h2>Search Engine Optimization</h2>
             <p>
@@ -41,7 +42,7 @@
             </p>
         </article>
 
-        <article id="online-reputation-management" class="online-reputation-management">
+        <article>
             <img src="./assets/images/online-reputation-management.jpg" alt="" class="float-right" />
             <h2>Online Reputation Management</h2>
             <p>
@@ -49,7 +50,7 @@
             </p>
         </article>
 
-        <article id="social-media-marketing" class="social-media-marketing">
+        <article>
             <img src="./assets/images/social-media-marketing.jpg" alt="" class="float-left" />
             <h2>Social Media Marketing</h2>
             <p>
