--- a/index.html
+++ b/index.html
@@ -32,10 +32,10 @@
     <section class="hero"></section>
 
     <!-- Primary Content -->
-    <section class="content">
+    <section class="primaryContent">
 
         <article>
-            <img src="./assets/images/search-engine-optimization.jpg" alt="" class="float-left" />
+            <img src="./assets/images/search-engine-optimization.jpg" alt="Notebook with SEO plan" class="float-left" />
             <h2>Search Engine Optimization</h2>
             <p>
                 The dominance of mobile internet use means that users are searching for the right business as they travel, shop, or sit on their couch at home. Search Engine Optimization (SEO) allows you to increase your visibility and find the right customers for your business.
@@ -43,7 +43,7 @@
         </article>
 
         <article>
-            <img src="./assets/images/online-reputation-management.jpg" alt="" class="float-right" />
+            <img src="./assets/images/online-reputation-management.jpg" alt="person checking reputation report on laptop" class="float-right" />
             <h2>Online Reputation Management</h2>
             <p>
                 The web is full of opinions, and some of these can be negative. Social media allows anyone with an internet connection to say whatever they want about your business. Online Reputation Management gives you the control over what potential customers see when they search for your business.
@@ -51,7 +51,7 @@
         </article>
 
         <article>
-            <img src="./assets/images/social-media-marketing.jpg" alt="" class="float-left" />
+            <img src="./assets/images/social-media-marketing.jpg" alt="conference table with Social media icons" class="float-left" />
             <h2>Social Media Marketing</h2>
             <p>
                 Social media continues to have a sizable influence on buying habits. Social media marketing helps you determine which platforms are suited to your brand, using analytics to find the right markets and increase your lead generation.
